--- a/index.html
+++ b/index.html
@@ -39,19 +39,20 @@
         </div>
         <nav id="nav-menu">
           <ul class="nav-links">
-            <li><a href="#"  onclick="showSection('home')">Home</a></li>
+            <li><a href="#home"  onclick="showSection('home')">Home</a></li>
             <li><a href="#">About Us</a></li>
-            <li><a href="#">Admissions</a></li>
+            <li><a href="#admissions" onclick="showSection('admissions')">Admissions</a></li>
             <li><a href="#">Gallery</a></li>
             <li><a href="#">Profile</a></li>
             <li><a href="#">Announcements</a></li>
-            <li><a href="#" id="career-link">Careers</a></li>
+            <li><a href="#career"  onclick="showSection('career')">Careers</a></li>
             <li><a href="#" onclick="showSection('contact')">Contact Us</a></li>
           </ul>
         </nav>
       </div>
     </header>
     <!-- Header End -->
+     <!-- home start -->
     <section id="home" class="home section active">
       <!-- Hero Section Start -->
       <div class="hero">
@@ -78,7 +79,7 @@
           <div class="textHolder">
             <h2>About Us</h2>
             <p>
-              Established in Karachi in 1978, <i>The City School</i> is today
+              Established in Karachi in 1978, <i class="italic">The City School</i><br/> is today
               one of the largest private school networks across the globe.
               Having more than 500 schools with over 150,000 students, we
               continue to expand our reach in other countries including United
@@ -225,6 +226,45 @@
        </div>
       <!-- slider end-->
     </section>
+    <!-- home end -->
+    <!-- admissions start -->
+     <section id="admissions" class="admissions section">
+       <!-- admissions hero start -->
+      <div class="hero">
+        <div class="container">
+          <div class="heading">
+            <h1>Admissions</h1>
+          </div>
+        </div>
+       </div>
+         <!-- admissions hero end -->
+     </section>
+    <!-- admissions end -->
+    <!-- Career start -->
+    <section id="career" class="career section">
+      <!-- career hero start -->
+     <div class="hero">
+      <div class="container">
+        <div class="heading">
+          <h1>Career</h1>
+        </div>
+      </div>
+     </div>
+        <!-- career hero end-->
+        <!-- career div start-->
+         <div class="careers">
+          <div class="container">
+            <h2>Careers at <i class="italic">The City School</i> </h2>
+            <p>The employees of <i class="italic"> The City School</i><br/> are an asset to the company. <i class="italic">The City School</i> is always looking for experienced and skilled individuals to work in a challenging yet productive environment. Happy employees are the top priority for <i class="italic">The City School</i> .</p>
+            <p>The recruitment process is transparent. We are an equal opportunity provider and work towards the professional development of our employees through regular training and certifications.</p>
+            <p>Here’s your chance to become a part of a fast-paced learning environment.</p>
+            <p>Apply for the vacant positions at <i class="italic">The City School</i><br/> Careers Portal</p>
+            <button class="btn">Apply now</button>
+          </div>
+         </div>
+        <!-- career div end-->
+    </section>
+    <!-- Career end -->
     <section id="contact" class="contact section">
       <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique sint possimus sunt beatae omnis ab corrupti rem, aliquid inventore, tempore explicabo, voluptas nemo adipisci dolorum sed quasi commodi aliquam? Dolore, ratione? Aut placeat veritatis non quo rerum alias quam hic doloremque dolor magni optio facilis, eveniet vitae amet, obcaecati culpa.</h1>
     </section>
