--- a/index.html
+++ b/index.html
@@ -237,6 +237,62 @@
           </div>
         </div>
        </div>
+       <div class="procedure">
+        <div class="container">
+          <div class="procedure">
+             <h2>Procedure</h2>
+             <strong class="title"> <i class="italic">The City School</i>&nbsp;  aims to instill a uniform set of values in our students from all over Pakistan.</strong>
+             <p>Your child may attend <i class="italic">The City School</i>&nbsp; in Punjab, Sindh, Balochistan, Khyber-Pakhtunkhwa, or Kashmir but our mission will be the same and that is, to encourage regional pride alongside a national consciousness that unifies the diverse areas of Pakistan.</p>
+             <p>Our philosophy of tolerance and diversity not only enables our students to integrate into their home communities within Pakistan but also prepares them for many international educational and career opportunities.</p>
+             <p>The class/grade to which a child is enrolled is based upon the age of the child by the 31st of July (for schools where the academic session* commences in August) and 28th of February (for schools where the academic session commences in March/April).</p>
+             <span>*All academic sessions consist terms</span>
+            <button class="btn">book a tour</button>
+          </div>
+          <div class="enroll">
+            <h2>Enrol now in 3 easy steps</h2>
+            <img src="/images/admission/registration.png" alt="">
+          </div>
+          <div class="registration">
+            <h2>Registration</h2>
+            <p>Please choose your desired mode for registration:  
+            </p>
+            <div class="cards">
+              <div class="card">
+                <strong class="title">Online</strong>
+                <p>Parents will receive an online admission test after the registration* fee payment (non-refundable).</p>
+                <button class="btn2">enroll now</button>
+              </div>
+              <div class="card">
+                <strong class="title">In Person</strong>
+                <p>Parents need to visit the school office for an admission test by completing the admission form and making an appointment for the test and the interview.</p>
+                <button class="btn2">request an appointment</button>
+              </div>
+            </div>
+          </div>
+          <div class="test">
+            <h2>About the Admission Test</h2>
+            <div class="faq-item">
+              <div class="faq-question">
+                <h3>Playgroup to Kindergarten</h3>
+                <span class="faq-toggle">+</span>
+              </div>
+              <div class="faq-answer">
+                <p>Generally, we assess the reading level of a child, vocabulary, and concepts of colours and numbers. In addition, we also consider the confidence of the child, the level of spoken English, and motor skills.</p>
+              </div>
+            </div>
+        
+            <div class="faq-item">
+              <div class="faq-question">
+                <h3>Class-I Onwards</h3>
+                <span class="faq-toggle">+</span>
+              </div>
+              <div class="faq-answer">
+                <p>Applications for Class I and onwards are tested in three subjects – English, Urdu and Mathematics. The pass percentage is 50%. The allotted time to complete the test is 30 minutes.</p>
+              </div>
+            </div>
+          </div>
+         </div>
+      </div>
          <!-- admissions hero end -->
      </section>
     <!-- admissions end -->
