working on contact us

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <li><a href="#">Profile</a></li>
             <li><a href="#">Announcements</a></li>
             <li><a href="#career"  onclick="showSection('career')">Careers</a></li>
-            <li><a href="#" onclick="showSection('contact')">Contact Us</a></li>
+            <li><a href="#contact" onclick="showSection('contact')">Contact Us</a></li>
           </ul>
         </nav>
       </div>
@@ -397,7 +397,6 @@
                 <p>Generally, we assess the reading level of a child, vocabulary, and concepts of colours and numbers. In addition, we also consider the confidence of the child, the level of spoken English, and motor skills.</p>
               </div>
             </div>
-        
             <div class="faq-item">
               <div class="faq-question">
                 <h3>Class-I Onwards</h3>
@@ -438,7 +437,90 @@
     </section>
     <!-- Career end -->
     <section id="contact" class="contact section">
-      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique sint possimus sunt beatae omnis ab corrupti rem, aliquid inventore, tempore explicabo, voluptas nemo adipisci dolorum sed quasi commodi aliquam? Dolore, ratione? Aut placeat veritatis non quo rerum alias quam hic doloremque dolor magni optio facilis, eveniet vitae amet, obcaecati culpa.</h1>
+     <div class="hero">
+      <div class="container">
+        <h1>Contact Us</h1>
+      </div>
+     </div>
+     <div class="connect">
+      <div class="container">
+        <h2>Connect with us!
+          111-444-123</h2>
+          <div class="connectWrap">
+            <div class="office">
+              <h4>Head Office</h4>
+              <ul>
+                <li><a href="#">Address: 31-Industrial Area, Gurumangat Road, Gulberg III, Lahore, Pakistan.</a></li>
+                <li><a href="#">Contact: +92 (42) 35773069-77</a></li>
+                <li><a href="#">Email: info@csn.edu.pk</a></li>
+              </ul>
+            </div>
+            <div class="office">
+              <h4>Head Office</h4>
+              <ul>
+                <li><a href="#">Address: 31-Industrial Area, Gurumangat Road, Gulberg III, Lahore, Pakistan.</a></li>
+                <li><a href="#">Contact: +92 (42) 35773069-77</a></li>
+                <li><a href="#">Email: info@csn.edu.pk</a></li>
+              </ul>
+            </div>
+            <div class="office">
+              <h4>Head Office</h4>
+              <ul>
+                <li><a href="#">Address: 31-Industrial Area, Gurumangat Road, Gulberg III, Lahore, Pakistan.</a></li>
+                <li><a href="#">Contact: +92 (42) 35773069-77</a></li>
+                <li><a href="#">Email: info@csn.edu.pk</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="formWrap">
+            <div class="form">
+              <h2>Get in touch by filling the form below</h2>
+              <div class="formHolder">
+                <div class="field">
+                  <label for="">Name*</label>
+                  <input type="text" placeholder="Enter Name">
+                </div>
+                <div class="field">
+                  <label for="">Name*</label>
+                  <input type="text" placeholder="Enter Name">
+                </div>
+                <div class="field">
+                  <label for="">Name*</label>
+                  <input type="text" placeholder="Enter Name">
+                </div>
+                <div class="field">
+                  <label for="">Name*</label>
+                  <input type="text" placeholder="Enter Name">
+                </div>
+              </div>
+            </div>
+            <div class="map"></div>
+          </div>
+      </div>
+     </div>
+     <div class="faqs">
+     <div class="container">
+     <h2>Frequently Asked Questions (FAQs)</h2>
+     <div class="faq-item">
+       <div class="faq-question">
+         <h3>What is the fee structure?</h3>
+         <span class="faq-toggle">+</span>
+       </div>
+       <div class="faq-answer">
+         <p>It varies by region and campus. Details will be provided during your visit to the school, or you can call our UAN (042) (051) (021) – 111 444 123 for more information.”</p>
+       </div>
+     </div>
+     <div class="faq-item">
+       <div class="faq-question">
+         <h3>What is the difference between Admission and Security deposit fee?</h3>
+         <span class="faq-toggle">+</span>
+       </div>
+       <div class="faq-answer">
+         <p>Admission fee and Security fee are payable at the time of admission. The admission fee is non-refundable, whereas, the security fee is refundable at the time of withdrawal.</p>
+       </div>
+     </div>
+    </div>
+     </div>
     </section>
     <footer>
       <div class="container">
