--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <li><a href="#about"  onclick="showSection('about')">About Us</a></li>
             <li><a href="#admissions" onclick="showSection('admissions')">Admissions</a></li>
             <li><a href="#">Gallery</a></li>
-            <li><a href="#">Profile</a></li>
+            <li><a href="#instructor"  onclick="showSection('instructor')">Instructor</a></li>
             <li><a href="#">Announcements</a></li>
             <li><a href="#career"  onclick="showSection('career')">Careers</a></li>
             <li><a href="#contact" onclick="showSection('contact')">Contact Us</a></li>
@@ -211,7 +211,7 @@
       </div>
       <!-- wentToSchool end -->
       <!-- slider start-->
-       <div class="slider">
+       <div class="sliderWrap">
         <div class="container">
           <strong class="h2">Our Network</strong>
           <div class="slides">
@@ -411,6 +411,70 @@
       </div>
      </section>
     <!-- admissions end -->
+    <!-- instructor start -->
+     <section id="instructor" class="instructor section">
+      <div class="hero">
+        <div class="container">
+          <div class="heading">
+            <h1>Instructor</h1>
+          </div>
+        </div>
+       </div>
+       <div class="introduction">
+        <div class="container">
+          <div class="heading">
+            <h2>Introduction</h2>
+            <strong>The Centre for Educational Professional Development (CEPD) at <i class="italic">The City School</i>&nbsp; is committed to building the capabilities, skills, and expertise of the teaching faculty, school leaders, and office management through our extensive portfolio of professional development programmes.</strong>
+          <div class="teacherMsg">
+            <h3>“…If staff development is to be a key component of school improvement, if it is to be something that empowers teachers and makes schools more responsive, then Pakistan’s (i.e., <i class="italic">The City School</i>&nbsp; ) experience has some lessons for us all.”</h3>
+          </div>
+          </div>
+        </div>
+       </div>
+       <div class="instructorDetails">
+        <div class="container">
+<div class="card">
+  <img src="/images/home/leadership3.png" alt="">
+  <strong class="name"></strong>
+  <span class="name">Fasiha</span>
+  <span class="designation">Computer Science</span>
+</div>
+<div class="card">
+  <img src="/images/home/leadership3.png" alt="">
+  <strong class="name"></strong>
+  <span class="name">Fasiha</span>
+  <span class="designation">Computer Science</span>
+</div>
+<div class="card">
+  <img src="/images/home/leadership3.png" alt="">
+  <strong class="name"></strong>
+  <span class="name">Fasiha</span>
+  <span class="designation">Computer Science</span>
+</div>
+<div class="card">
+  <img src="/images/home/leadership3.png" alt="">
+  <strong class="name"></strong>
+  <span class="name">Fasiha</span>
+  <span class="designation">Computer Science</span>
+</div>
+<div class="card">
+  <img src="/images/home/leadership3.png" alt="">
+  <strong class="name"></strong>
+  <span class="name">Fasiha</span>
+  <span class="designation">Computer Science</span>
+</div>
+<div class="card">
+  <img src="/images/home/leadership3.png" alt="">
+  <strong class="name"></strong>
+  <span class="name">Fasiha</span>
+  <span class="designation">Computer Science</span>
+</div>
+
+        </div>
+       </div>
+     </section>
+    <!-- instructor end -->
+
     <!-- Career start -->
     <section id="career" class="career section">
       <!-- career hero start -->
