--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li><a href="#home"  onclick="showSection('home')">Home</a></li>
             <li><a href="#about"  onclick="showSection('about')">About Us</a></li>
             <li><a href="#admissions" onclick="showSection('admissions')">Admissions</a></li>
-            <li><a href="#">Gallery</a></li>
+            <li><a href="#gallery" onclick="showSection('gallery')">Gallery</a></li>
             <li><a href="#instructor"  onclick="showSection('instructor')">Instructor</a></li>
             <li><a href="#">Announcements</a></li>
             <li><a href="#career"  onclick="showSection('career')">Careers</a></li>
@@ -411,6 +411,32 @@
       </div>
      </section>
     <!-- admissions end -->
+    <!-- gallery start -->
+     <section id="gallery" class="gallery section">
+      <div class="hero">
+        <div class="container">
+        <div class="heading">
+          <h1>Gallery</h1>
+        </div>
+      </div>
+    </div>
+        <div class="cardImgs">
+          <img src="/images/gallery/g1.jpg" alt="gallery 1" class="gallery-img">
+          <img src="/images/gallery/g2.jpg" alt="gallery 2" class="gallery-img">
+          <img src="/images/gallery/g3.jpg" alt="gallery 3" class="gallery-img">
+          <img src="/images/gallery/g4.jpg" alt="gallery 4" class="gallery-img">
+          <img src="/images/gallery/g5.jpg" alt="gallery 5" class="gallery-img">
+          <img src="/images/gallery/g6.jpg" alt="gallery 6" class="gallery-img">
+          <img src="/images/gallery/g7.jpg" alt="gallery 7" class="gallery-img">
+          <img src="/images/gallery/g8.jpg" alt="gallery 8" class="gallery-img">
+        </div>
+        <div id="imageModal" class="modal">
+          <span class="close">&times;</span>
+          <img class="modal-content" id="modalImage">
+        </div>
+       </div>
+     </section>
+    <!-- gallery end-->
     <!-- instructor start -->
      <section id="instructor" class="instructor section">
       <div class="hero">
