--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li><a href="#admissions" onclick="showSection('admissions')">Admissions</a></li>
             <li><a href="#gallery" onclick="showSection('gallery')">Gallery</a></li>
             <li><a href="#instructor"  onclick="showSection('instructor')">Instructor</a></li>
-            <li><a href="#">Announcements</a></li>
+            <li><a href="#announcements" onclick="showSection('gallery')">Announcements</a></li>
             <li><a href="#career"  onclick="showSection('career')">Careers</a></li>
             <li><a href="#contact" onclick="showSection('contact')">Contact Us</a></li>
           </ul>
@@ -500,7 +500,35 @@
        </div>
      </section>
     <!-- instructor end -->
-
+<!-- announcement start -->
+ <section id="announcements" class="section announcements">
+  <div class="hero">
+    <div class="container">
+      <div class="heading">
+        <h1>Announcement</h1>
+      </div>
+      <img src="/images/announcement/images.png" alt="">
+    </div>
+  </div>
+  <div class="announcementWrap">
+    <div class="container">
+      <h2>Important Announcement</h2>
+      <div class="text">
+        <h4 class="announcementTitle">Fee Announcement</h4>
+        <p class="announcementText">
+          We are launching a new feature on our website next week. Stay tuned for more updates!
+        </p>
+      </div>
+      <div class="text">
+        <h4 class="announcementTitle">Fee Announcement</h4>
+        <p class="announcementText">
+          We are launching a new feature on our website next week. Stay tuned for more updates!
+        </p>
+      </div>
+    </div>
+  </div>
+ </section>
+<!-- announcement end -->
     <!-- Career start -->
     <section id="career" class="career section">
       <!-- career hero start -->
@@ -600,7 +628,8 @@
             </div>
             
             <div class="map">
-              <img src="/images/home/about.jpg" alt="">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27213.582875415792!2d74.3226584870913!3d31.504987740025992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3919045a28ff1d39%3A0xf71e739b84b3c3c!2sGulberg%20III%2C%20Lahore%2C%20Punjab%2C%20Pakistan!5e0!3m2!1sen!2s!4v1727655256051!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <!-- <img src="/images/home/about.jpg" alt=""> -->
             </div>
           </div>
       </div>
