--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               meet the demands for quality education as well as to ensure a
               strong global presence.
             </p>
-            <button class="btn">learn more</button>
+            <button class="btn"  onclick="showSection('about')">learn more</button>
           </div>
         </div>
       </div>
@@ -100,7 +100,7 @@
               <div class="textWrap">
                 <strong class="title">Register Online</strong>
                 <p>A quick and easy process</p>
-                <a href="/"> > Register Now</a>
+                <a href="#contact" onclick="showSection('contact')"> > Register Now</a>
               </div>
               <div class="imgHolder">
                 <img src="images/home/card1.jpg" alt="card" />
@@ -110,7 +110,7 @@
               <div class="textWrap">
                 <strong class="title">Register Online</strong>
                 <p>A quick and easy process</p>
-                <a href="/"> > Register Now</a>
+                <a href="#contact" onclick="showSection('contact')"> > Register Now</a>
               </div>
               <div class="imgHolder">
                 <img src="images/home/card1.jpg" alt="card" />
@@ -120,7 +120,7 @@
               <div class="textWrap">
                 <strong class="title">Register Online</strong>
                 <p>A quick and easy process</p>
-                <a href="/"> > Register Now</a>
+                <a href="#contact" onclick="showSection('contact')"> > Register Now</a>
               </div>
               <div class="imgHolder">
                 <img src="images/home/card1.jpg" alt="card" />
@@ -363,7 +363,7 @@
              <p>Our philosophy of tolerance and diversity not only enables our students to integrate into their home communities within Pakistan but also prepares them for many international educational and career opportunities.</p>
              <p>The class/grade to which a child is enrolled is based upon the age of the child by the 31st of July (for schools where the academic session* commences in August) and 28th of February (for schools where the academic session commences in March/April).</p>
              <span>*All academic sessions consist terms</span>
-            <button class="btn">book a tour</button>
+            <button class="btn" onclick="showSection('contact')">book a tour</button>
           </div>
           <div class="enroll">
             <h2>Enrol now in 3 easy steps</h2>
@@ -377,12 +377,12 @@
               <div class="card">
                 <strong class="title">Online</strong>
                 <p>Parents will receive an online admission test after the registration* fee payment (non-refundable).</p>
-                <button class="btn2">enroll now</button>
+                <button class="btn2" onclick="showSection('contact')">enroll now</button>
               </div>
               <div class="card">
                 <strong class="title">In Person</strong>
                 <p>Parents need to visit the school office for an admission test by completing the admission form and making an appointment for the test and the interview.</p>
-                <button class="btn2">request an appointment</button>
+                <button class="btn2" onclick="showSection('contact')">request an appointment</button>
               </div>
             </div>
           </div>
@@ -548,7 +548,7 @@
             <p>The recruitment process is transparent. We are an equal opportunity provider and work towards the professional development of our employees through regular training and certifications.</p>
             <p>Here’s your chance to become a part of a fast-paced learning environment.</p>
             <p>Apply for the vacant positions at <i class="italic">The City School</i><br/> Careers Portal</p>
-            <button class="btn">Apply now</button>
+            <button class="btn" onclick="showSection('contact')">Apply now</button>
           </div>
          </div>
         <!-- career div end-->
@@ -671,8 +671,8 @@
               >
             </li>
             <li><a href="">Call: +92 (42) 111-444-123</a></li>
-            <li><a href="">Email: info@csn.edu.pk</a></li>
-            <li><button class="btn2">Contact Us</button></li>
+            <li><a href="" >Email: info@csn.edu.pk</a></li>
+            <li><button class="btn2" onclick="showSection('contact')">Contact Us</button></li>
           </ul>
           <div class="icon">
             <strong class="title">SOCIAL</strong>
