--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
         </div>
         <nav id="nav-menu">
           <ul class="nav-links">
-            <li><a href="#home"  onclick="showSection('home')">Home</a></li>
-            <li><a href="#about"  onclick="showSection('about')">About Us</a></li>
-            <li><a href="#admissions" onclick="showSection('admissions')">Admissions</a></li>
-            <li><a href="#gallery" onclick="showSection('gallery')">Gallery</a></li>
-            <li><a href="#instructor"  onclick="showSection('instructor')">Instructor</a></li>
-            <li><a href="#announcements" onclick="showSection('gallery')">Announcements</a></li>
-            <li><a href="#career"  onclick="showSection('career')">Careers</a></li>
-            <li><a href="#contact" onclick="showSection('contact')">Contact Us</a></li>
+            <li class="nav-item"><a href="#home"  onclick="showSection('home')">Home</a></li>
+            <li class="nav-item"><a href="#about"  onclick="showSection('about')">About Us</a></li>
+            <li class="nav-item"><a href="#admissions" onclick="showSection('admissions')">Admissions</a></li>
+            <li class="nav-item"><a href="#gallery" onclick="showSection('gallery')">Gallery</a></li>
+            <li class="nav-item"><a href="#instructor"  onclick="showSection('instructor')">Instructor</a></li>
+            <li class="nav-item"><a href="#announcements" onclick="showSection('gallery')">Announcements</a></li>
+            <li class="nav-item"><a href="#career"  onclick="showSection('career')">Careers</a></li>
+            <li class="nav-item"><a href="#contact" onclick="showSection('contact')">Contact Us</a></li>
           </ul>
         </nav>
       </div>
