--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- header start -->
     <header>
       <div class="containerr">
-        <div class="logo">
+        <div class="logo" onclick="showSection('home')">
           <img src="/images/home/logo.svg" alt="Logo" />
         </div>
         <div class="menu-icon" id="menu-icon">
@@ -662,7 +662,7 @@
       <div class="container">
         <div class="left">
           
-          <div class="logo"><img src="/images/home/logo.svg" alt="" /></div>
+          <div class="logo" onclick="showSection('home')"><img src="/images/home/logo.svg" alt="" /></div>
           <ul class="list">
             <li>
               <a href="">
